# aire

./: .dockerignore  .env.example  .gitignore  .vercelignore  AGENTS.md  CODE_REVIEW.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  electron-builder.json  eslint.config.mjs  kimi-statusline-feature-request.md  kimi-statusline-issue-body.md  kimi-usage-ux-issue-body.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.mjs  three-ai-ui-test.js  tsconfig.electron.json  tsconfig.json  vitest.config.ts
.claude/: handoff-jianan-ai-v3.md
.github/: copilot-instructions.md
.open-design/: scanner-cache.json
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_branding.sql  003_legal_clauses.sql  004_land_registry.sql  004_master_password_rekey.rs  005_owner_consent_log.sql  006_case_fields.sql
src-tauri/src/: lib.rs  log.rs  main.rs  mcp_client.rs  opcos.rs  paths.rs  secrets.rs  startup.rs
src-tauri/src/branding/: logo.rs  mod.rs  tests.rs  theme.rs
src-tauri/src/commands/: cases.rs  drafts.rs  license.rs  log.rs  mod.rs  pdf.rs  real_price.rs
src-tauri/src/crypto/: master_password.rs  mod.rs  recovery_code.rs  vault.rs
src-tauri/src/crypto/master_password/: tests.rs
src-tauri/src/crypto/recovery_code/: tests.rs
src-tauri/src/crypto/vault/: tests.rs
src-tauri/src/data_portability/: aire_format.rs  conflict.rs  export.rs  import.rs  mod.rs
src-tauri/src/data_portability/aire_format/: tests.rs
src-tauri/src/data_portability/conflict/: tests.rs
src-tauri/src/data_portability/export/: tests.rs
src-tauri/src/data_portability/import/: tests.rs
src-tauri/src/db/: cases.rs  drafts.rs  mod.rs  oplog.rs  settings.rs
src-tauri/src/encryption/: mod.rs  tests.rs
src-tauri/src/geo_services/: mapillary.rs  mod.rs  nlsc_aerial.rs  osm_map.rs  overpass.rs
src-tauri/src/land_registry/: api_key_storage.rs  balance.rs  consent.rs  mod.rs  pull.rs
src-tauri/src/land_registry/apis/: address_to_parcel.rs  building_ownership.rs  building_registry.rs  co_owners.rs  land_registry.rs  land_value.rs  mod.rs  mortgages.rs  zoning.rs
src-tauri/src/land_registry/batch/: mod.rs  tests.rs
src-tauri/src/land_registry/billing_log/: mod.rs  tests.rs
src-tauri/src/land_registry/cache/: mod.rs  tests.rs
src-tauri/src/land_registry/client/: mod.rs  tests.rs
src-tauri/src/land_registry/disk_resilience/: mod.rs  tests.rs
src-tauri/src/land_registry/errors/: mod.rs  tests.rs
src-tauri/src/land_registry/field_mapping/: mod.rs  tests.rs
src-tauri/src/land_registry/migration_rollback/: mod.rs  tests.rs
src-tauri/src/land_registry/opcos_offline_grace/: mod.rs  tests.rs
src-tauri/src/land_registry/time_sync/: mod.rs  tests.rs
src-tauri/src/legal_clauses/: cache.rs  mod.rs  scheduler.rs  sync.rs
src-tauri/src/legal_clauses/cache/: tests.rs
src-tauri/src/legal_clauses/scheduler/: tests.rs
src-tauri/src/legal_clauses/sync/: tests.rs
src-tauri/src/realtor_license/: cache.rs  client.rs  mod.rs
src-tauri/src/realtor_license/cache/: tests.rs
src-tauri/src/realtor_license/client/: tests.rs
src-tauri/tests/: cop_api_live.rs  e2e_smoke.rs
(+1855 files in other folders)
