[package]
name = "aire"
version = "0.1.0"
description = "AIRE 不動產說明書桌面 App"
authors = ["Fish <fish@fishot.com>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "aire_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri 核心
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"

# SQLite（Group 2 起會用到，先納入依賴避免後續 Wave 重 build）
rusqlite = { version = "0.31", features = ["bundled"] }

# HTTP 客戶端（Group 4 用於 OPCOS API）
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# OS keychain（Group 3 用於憑證儲存）
keyring = "2"

# 非同步 runtime（Tauri 內已含但顯式列出便於我們 spawn task）
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

# 7-day sync scheduler (Phase 3 #1d)
tokio-cron-scheduler = "0.13"

# UUID（Group 4 device_id 生成）
uuid = { version = "1", features = ["v4"] }
argon2 = "0.5.3"
aes-gcm = "0.10.3"
bip39 = "2.2.2"
zeroize = { version = "1.8.2", features = ["derive"] }
subtle = "2.6"
sha2 = "0.10.9"
zip = "4.2.0"
image = "0.25.6"
rand = "0.8.5"
chrono = "0.4.44"
thiserror = "2.0.12"
base64 = "0.22.1"
toml = "0.8.23"
fs2 = "0.4.3"

[features]
# Phase 2 紅燈測試：cargo test --features phase2-red-tests 觸發未實作模組編譯錯誤
phase2-red-tests = []

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
# Phase 2 紅燈測試用 stub 說明（Phase 3 實作時移到 [dependencies]）
# 注意：以下 crates 是 Phase 3 預期使用的，測試檔案 import 了對應的模組路徑
# 目前 cargo test 會因「模組不存在」而編譯失敗 = 這就是紅燈的預期行為
#
# 預期 Phase 3 加入：
# argon2 = { version = "0.5", features = ["std"] }   # Argon2id 金鑰派生
# aes-gcm = "0.10"                                    # AES-256-GCM 加密
# zeroize = { version = "1", features = ["derive"] }  # 記憶體清零
# zip = "2"                                           # ZIP 容器（.aire 格式）
# sha2 = "0.10"                                       # SHA-256 checksum
# bip39 = "2"                                         # BIP39 詞庫驗證
#
# 測試專用輔助（不會進 production binary）：
# tempfile = "3"                                      # 臨時目錄/檔案
# assert_matches = "1"                                # 模式匹配斷言
